add realtime chat and update project
