# app/Models/User.php
@@ -57,4 +57,11 @@ class User extends Authenticatable
         return $this->hasMany(SupportTicket::class);
     }
 
+    public function conversations()
+    {
+        return $this->belongsToMany(Conversation::class, 'conversation_user', 'user_id', 'conversation_id')
+            ->withPivot('is_blocked')
+            ->withTimestamps();
+    }
+
 }
